Updated layout to match mockup

--- a/CounterGame/app/src/main/res/values/strings.xml
+++ b/CounterGame/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CounterGame</string>
+    <string name="app_name">Youth</string>
     <string name="title_activity_reg">Reg</string>
     <string name="action_settings">Settings</string>
 
